fix: text-align instead of justify-self

--- a/css/cart.css
+++ b/css/cart.css
@@ -17,7 +17,7 @@
 
 main h3 {
   margin-top: 7vh;
-  justify-self: center;
+  text-align: center;
 }
 
 /* media query 1 - (max-width: 867px) CART GRID */
